# terraphast

./: .gitignore  .gitmodules  Allium.data  Allium.h  Allium.positions  Asplenium.data.1  Asplenium.h  Bouchenak.h  CMakeLists.txt  Caryophyllaceae.h  Eucalyptus.h  Eucalyptus.positions  Euphorbia.h  Ficus.data.1  Ficus.h  Iris.h  Iris.positions  Makefile  Meusemann.h  Meusemann.positions  Pyron.h  Pyron.positions  README.md  TODO  appveyor.yml  doxygen.conf  format.sh  ifugao.cpp  ifugao.h  input_parser.c  input_parser.cpp  input_parser.h  main.c  main.cpp  pre-commit  restoreCPU.sh  setupCPU.sh  setup_workspace.sh  setup_workspace_windows.sh  speed_test  (+15 more)
alexis_samples/: Makefile
app/: convert.cpp  isomorphic.cpp  main.cpp  progress-app.cpp  reroot.cpp  subtree.cpp  tree_gen.cpp
benchmark/: bitvector.txt  callgrind.out.Allium_Reduced.21608  callgrind.out.Burleigh.birds.small.3466  callgrind.out.bitvector.21069  gbenchmark.out.bitvector.txt
c_lib/: terraces.cpp
converted/: Allium.data  Allium.nwk  Asplenium.data  Asplenium.nwk  Asplenium.nwk.to_remove  Burleigh.birds.data  Burleigh.birds.nwk  Burleigh.birds.nwk.old  Burleigh.birds.nwk.to_remove  Caryophyllaceae.data  Caryophyllaceae.nwk  Caryophyllaceae.nwk.to_remove  Eucalyptus.data  Eucalyptus.nwk  Eucalyptus.nwk.to_remove  Euphorbia.data  Euphorbia.nwk  Euphorbia.nwk.to_remove  Ficus.data  Ficus.nwk  Ficus.nwk.to_remove  Iris.data  Iris.nwk  Iris.nwk.to_remove  Meredith.mammals.nwk  Primula.data  Primula.nwk.old  Primula.nwk.to_remove  Rabosky.scincids.nwk.old  Rabosky.scincids.nwk.to_remove  Ranunculus.data  Ranunculus.nwk  Ranunculus.nwk.to_remove  Rhododendron.nwk  Rhododendron.nwk.old  Rhododendron.nwk.to_remove  Rosaceae.nwk.old  Rosaceae.nwk.to_remove  Shi.bats.data  Shi.bats.nwk  (+16 more)
counts/: Allium.data  Allium_Reduced.data  Allium_Tiny.data  Allium_Tiny.data.full  Asplenium.data.1  Asplenium.data.2  Bouchenak.data  Eucalyptus.data.1  Eucalyptus.data.2  Euphorbia.data.1  Euphorbia.data.2  Ficus.data.1  Ficus.data.2  Iris.data  Meusemann.data  Pyron.data  team1-time.csv  team1.csv  team2.csv  terraphy-no-reroot.csv  terraphy-time.csv  terraphy.csv
data/: Allium.subsets  Allium_Reduced.data  Allium_Reduced.subsets  Allium_Tiny.data  Allium_Tiny.nwk  Allium_Tiny.subsets  Asplenium.subsets.1  Asplenium.subsets.2  Bouchenak.subsets  Burleigh.birds.data.2  Burleigh.birds.small.data  Caryophyllaceae.subsets  Eucalyptus.data.1  Eucalyptus.data.2  Eucalyptus.nwk.3  Eucalyptus.subsets.1  Eucalyptus.subsets.2  Eucalyptus.subsets.3  Euphorbia.data.2  Euphorbia.nwk.1  Euphorbia.subsets.1  Euphorbia.subsets.2  Ficus.data.2  Ficus.data.3  Ficus.subsets.1  Ficus.subsets.2  Ficus.subsets.3  Iris.subsets  Meusemann.subsets  Miadlikowska.fungi.nwk  Misof.insects.data  Pyron.subsets  Ranunculus.nwk  Rosaceae.nwk  Solanum.nwk  Wick.1kp.many.genes.data  benchmark.py  extract_used_samples.py  run_experiments_team2.sh  run_experiments_terraphastII.sh  (+3 more)
debug_app/: main.cpp
documentation/: walkthrough.md
drawing/: Allium_Reduced.positions  Asplenium.positions  Bouchenak.positions  Caryophyllaceae.positions  Euphorbia.positions  Ficus.positions
include/: UnionFind.h  constraints.h  debug.h  functional.h  ifugao.h  input_parser.h  leaf_label_mapper.h  leaf_set.h  terraces.h  tree.h  types.h  util.h
input/: Euphorbia.data.1  Ficus.data  Ficus.nwk  rudolf.nwk.1  rudolf.nwk.2
lib/: advanced.cpp  bipartitions.cpp  bipartitions.hpp  bitmatrix.cpp  bits.hpp  bitvector.cpp  clamped_uint.hpp  constraints.cpp  data.cpp  fast_set.cpp  multitree.cpp  multitree.hpp  multitree_impl.hpp  multitree_iterator.cpp  multitree_iterator.hpp  nodes.cpp  parse.cpp  parser.cpp  ranked_bitvector.hpp  rooting.cpp  simple.cpp  small_bipartition.hpp  stack_allocator.hpp  subtree_extraction.cpp  supertree.cpp  supertree_enumerator.hpp  supertree_helpers.cpp  supertree_helpers.hpp  supertree_variants.hpp  supertree_variants_debug.hpp  supertree_variants_multitree.hpp  trees.cpp  trees_impl.hpp  unconstrained_enumerator.cpp  unconstrained_enumerator.hpp  union_find.cpp  union_find.hpp  union_find_debug.hpp  utils.hpp  validation.cpp  (+1 more)
modules/: FindBoost.cmake
newick-tools/: lex_ntree.c  newick-tools.c  newick-tools.cpp  newick-tools.h  ntree.cpp  parse_ntree.c  rtree.c
scripts/: counter.sh  data-to-subsets  datatosubsets.py  generator.sh  species-from-tree  subsets-to-data  terraphy-generate  terraphy_count.sh
src/: UnionFind.cpp  constraints.cpp  ifugao.cpp  input_parser.cpp  leaf_label_mapper.cpp  leaf_set.cpp  main.cpp  missing_data_to_nexus.cpp  terraces.cpp  tree.cpp  util.cpp
terraphastI/: CMakeLists.txt
terraphastI/c_include/terraces/: terraces.h
terraphastI/data/: README.md
terraphastI/data/counts/: team1.csv  terraphy-no-reroot.csv  terraphy-time.csv  terraphy.csv
terraphastI/data/data/: Asplenium.data.2  Burleigh.birds.data.3  Meredith.mammals.data  Miadlikowska.fungi.data  Rhododendron.data  Solanum.data
terraphastI/data/data/terraphy/: Allium.subsets  Asplenium.nwk.rerooted.1  Burleigh.birds.small.nwk.rerooted  Euphorbia.subsets.2  Ficus.nwk.rerooted.1  Misof.insects.subsets  Ranunculus.subsets  Szygium.subsets.1  Tolley.chameleons.subsets
terraphastI/data/scripts/: terraphy-count
terraphastI/include/terraces/: advanced.hpp  bitmatrix.hpp  rooting.hpp  supertree.hpp
terraphastI/lib/: bipartitions.hpp  bitmatrix.cpp  bitvector.hpp  multitree.hpp  subtree_extraction.cpp  supertree.cpp  trees.cpp  validation.cpp
terraphastI/platform/windows/terraces/: clamped_uint.hpp  intrinsics.hpp
terraphastI/scripts/: convert.py
terraphastI/test/: clamped_uint.cpp  subtree_extraction.cpp  supertree.cpp  trees.cpp  validation_utils.hpp
terraphastI/test/full/: c_api.cpp  datasets.hpp
terraphastI/tools/: isomorphic.cpp
terraphastII/: CMakeLists.txt  README.md  TODO  test_script  valgrind_profile.sh
test/: algorithm_test.cpp  algorithm_test.h  app.cpp  bipartitions.cpp  bitmatrix.cpp  bits.cpp  bitvector.cpp  c_api.cpp  constraints.cpp  datasets.cpp  datasets.hpp  demo.cpp  dummy_tree1_rooted.nwk  fast_set.cpp  gbenchmark.cpp  (+22 more)
(+988 files in other folders)
